// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageTemplates component matches snapshot with not submitted status 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-full"
    >
      <table
        class="nhsuk-table-responsive"
        data-testid="manage-template-table"
        id="manage-template-table"
      >
        <caption
          class="nhsuk-table__caption"
        >
          List of templates
        </caption>
        <thead
          class="nhsuk-table__head"
          role="rowgroup"
        >
          <tr
            class="nhsuk-table__row"
          >
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-name"
              scope="col"
            >
              Name
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-type"
              scope="col"
            >
              Type
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-status"
              scope="col"
            >
              Status
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-date-created"
              scope="col"
            >
              Date created
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-action"
              scope="col"
            >
              Action
            </th>
          </tr>
        </thead>
        <tbody
          class="nhsuk-table__body"
        >
          <tr
            class="nhsuk-table__row"
          >
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Name 
              </span>
              <a
                href="/preview-nhs-app-template/1"
              >
                Template 1
              </a>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Type 
              </span>
              NHS App message
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Status 
              </span>
              <strong
                class="nhsuk-tag"
              >
                Not yet submitted
              </strong>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Date created 
              </span>
              1st Jan 2021
              <br />
              00:00
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Action 
              </span>
              <p
                class="nhsuk-u-margin-bottom-2"
              >
                <a
                  href="/copy-template/1"
                  id="copy-template-link-0"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Template 1
                  </span>
                  Copy
                </a>
              </p>
              <p
                class="nhsuk-u-margin-bottom-2"
              >
                <a
                  href="/delete-template/1"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Template 1
                  </span>
                  Delete
                </a>
              </p>
            </td>
          </tr>
          <tr
            class="nhsuk-table__row"
          >
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Name 
              </span>
              <a
                href="/view-submitted-nhs-app-template/2"
              >
                Template 2
              </a>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Type 
              </span>
              NHS App message
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Status 
              </span>
              <strong
                class="nhsuk-tag nhsuk-tag--grey"
              >
                Submitted
              </strong>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Date created 
              </span>
              1st Feb 2021
              <br />
              00:00
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Action 
              </span>
              <p
                class="nhsuk-u-margin-bottom-2"
              >
                <a
                  href="/copy-template/2"
                  id="copy-template-link-1"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Template 2
                  </span>
                  Copy
                </a>
              </p>
            </td>
          </tr>
          <tr
            class="nhsuk-table__row"
          >
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Name 
              </span>
              <a
                href="/view-submitted-letter-template/3"
              >
                Template 3
              </a>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Type 
              </span>
              Letter - French
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Status 
              </span>
              <strong
                class="nhsuk-tag nhsuk-tag--grey"
              >
                Submitted
              </strong>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Date created 
              </span>
              1st Feb 2021
              <br />
              00:00
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Action 
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ManageTemplates component matches snapshot with submitted status 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-full"
    >
      <table
        class="nhsuk-table-responsive"
        data-testid="manage-template-table"
        id="manage-template-table"
      >
        <caption
          class="nhsuk-table__caption"
        >
          List of templates
        </caption>
        <thead
          class="nhsuk-table__head"
          role="rowgroup"
        >
          <tr
            class="nhsuk-table__row"
          >
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-name"
              scope="col"
            >
              Name
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-type"
              scope="col"
            >
              Type
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-status"
              scope="col"
            >
              Status
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-date-created"
              scope="col"
            >
              Date created
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-action"
              scope="col"
            >
              Action
            </th>
          </tr>
        </thead>
        <tbody
          class="nhsuk-table__body"
        >
          <tr
            class="nhsuk-table__row"
          >
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Name 
              </span>
              <a
                href="/view-submitted-nhs-app-template/1"
              >
                Template 1
              </a>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Type 
              </span>
              NHS App message
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Status 
              </span>
              <strong
                class="nhsuk-tag nhsuk-tag--grey"
              >
                Submitted
              </strong>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Date created 
              </span>
              1st Jan 2021
              <br />
              00:00
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Action 
              </span>
              <p
                class="nhsuk-u-margin-bottom-2"
              >
                <a
                  href="/copy-template/1"
                  id="copy-template-link-0"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Template 1
                  </span>
                  Copy
                </a>
              </p>
            </td>
          </tr>
          <tr
            class="nhsuk-table__row"
          >
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Name 
              </span>
              <a
                href="/view-submitted-nhs-app-template/2"
              >
                Template 2
              </a>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Type 
              </span>
              NHS App message
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Status 
              </span>
              <strong
                class="nhsuk-tag nhsuk-tag--grey"
              >
                Submitted
              </strong>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Date created 
              </span>
              1st Feb 2021
              <br />
              00:00
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Action 
              </span>
              <p
                class="nhsuk-u-margin-bottom-2"
              >
                <a
                  href="/copy-template/2"
                  id="copy-template-link-1"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Template 2
                  </span>
                  Copy
                </a>
              </p>
            </td>
          </tr>
          <tr
            class="nhsuk-table__row"
          >
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Name 
              </span>
              <a
                href="/view-submitted-letter-template/3"
              >
                Template 3
              </a>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Type 
              </span>
              Letter - French
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Status 
              </span>
              <strong
                class="nhsuk-tag nhsuk-tag--grey"
              >
                Submitted
              </strong>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Date created 
              </span>
              1st Feb 2021
              <br />
              00:00
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                aria-hidden="true"
                class="nhsuk-table-responsive__heading"
              >
                Action 
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
